
AjTalk

An Smalltalk-like interpreter, written in C#.

Work in progress.

2007-09-15
Creation of this project folder

2008-05-04
Begin to work with TDD (late but sure)

Angel "Java" Lopez
http://www.ajlopez.com/en
http://ajlopez.wordpress.com/