@@ -1,0 +1,12 @@
+
+AjTalk
+http://code.google.com/p/ajtalk
+
+An Smalltalk-like interpreter written in .NET. Work in progress.
+
+More about AjTalk http://ajlopez.wordpress.com/category/ajtalk
+
+Angel "Java" Lopez
+http://www.ajlopez.com/en
+http://ajlopez.wordpress.com
+
